--- a/views/layouts/admin.twig
+++ b/views/layouts/admin.twig
@@ -6,8 +6,8 @@
         <META http-equiv=content-type content="text/html; charset=utf-8">
         <META content="" name=keywords>
         <META content="" name=description>
-        <LINK href="/img/favicon.png" type=image/png rel="shortcut icon">
-        <link rel="stylesheet" href="/css/admin.css" />
+        <LINK href="/favicon.png" type=image/png rel="shortcut icon">
+        <link rel="stylesheet" href="/assets/css/admin.css" />
         {% block meta %}{% endblock %}
     </head>
     <body>
