--- a/views/layouts/default.twig
+++ b/views/layouts/default.twig
@@ -4,7 +4,7 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
         <META http-equiv=content-type content="text/html; charset=utf-8">
-        <LINK href="/img/favicon.png" type=image/png rel="shortcut icon">
+        <LINK href="/favicon.png" type=image/png rel="shortcut icon">
         {% block meta %}{% endblock %}
     </head>
     <body>
