fix host in photolist

--- a/views/photolist.twig
+++ b/views/photolist.twig
@@ -7,7 +7,7 @@
             {{ images|json_encode|raw }},
             {
                 socialButtons: {{ socialButtons }},
-                host: {{ host }}
+                host: '{{ host }}'
             }
         );
     </script>
