--- a/resources/photolist/styles.less
+++ b/resources/photolist/styles.less
@@ -1,3 +1,29 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    -ms-filter: alpha(opacity=0);
+    filter: alpha(opacity=0);
+  }
+  100% {
+    opacity: 1;
+    -ms-filter: alpha(opacity=100);
+    filter: alpha(opacity=100);
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+    -ms-filter: alpha(opacity=0);
+    filter: alpha(opacity=0);
+  }
+  100% {
+    opacity: 1;
+    -ms-filter: alpha(opacity=100);
+    filter: alpha(opacity=100);
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -26,8 +52,19 @@ body {
     position: relative;
     margin-bottom: 2px;
     cursor: pointer;
+    width: 900px;
+    height: 600px;
     img {
       width: 100%;
+      height: 100%;
+      -webkit-animation: fadeIn 1s forwards;
+      animation: fadeIn 1s forwards;
+      display: block;
+    }
+    &.standby {
+      img {
+        display: none;
+      }
     }
   }
 }
@@ -51,19 +88,6 @@ body {
   cursor: pointer;
   border: red;
   margin: 0 5px;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    -ms-filter: alpha(opacity=0);
-    filter: alpha(opacity=0);
-  }
-  100% {
-    opacity: 1;
-    -ms-filter: alpha(opacity=100);
-    filter: alpha(opacity=100);
-  }
 }
 
 #photoList:not(.mobile) .image:hover .share-buttons {
@@ -145,10 +169,12 @@ body {
 
   .container .image {
     width: 100%;
+    height: auto;
   }
 
   .container .image img {
     width: 100%;
+    height: auto;
   }
 
   #toTop {
